# Pro_2024-9-26

./: README.md  t001.txt
Craw3/: Cargo.toml
Craw3/src/: main.rs
Craw4_success/: Cargo.toml  build.rs
Craw4_success/src/: main.rs
Crawl_Homepages_Of_Different_Websites/: Cargo.toml
Crawl_Homepages_Of_Different_Websites/src/: main.rs
Detection_Agent/: Cargo.toml
Detection_Agent/src/: main.rs
JavaScript_grammar_git/tool/: 0-获取当前页面谷歌网址.js
JavaScript_grammar_git/yufa/: 1-字符串.md
Pro/: 中药.md
Pro/Crawl_Homepages_Of_Different_Websites/: Cargo.toml
Pro/Text_tool/: Cargo.toml
Pro/js/MGKJ_v15/: manifest.json  popup.html  (+1 more)
Rust_Analysis/: .gitignore  Cargo.toml
Rust_Analysis/muban/: 0-{}预处理.py  0-预处理.py  1-match.py  1-编译属性.py  10-特质.py  10.01-特质 .py  2-打印.py  2-解题思路.py  3-打印.py  4-match-Result.py  4-match.py  5-类型解析.py
Rust_Analysis/src/: main.rs  main.rs1
Rust_grammar_git/0-获取子目录/: 1-获取外层子目录文件最简单写法.rs  2-获取外层文件目录expect-unwrap写法.rs
Rust_grammar_git/1-文本处理/: 1-文本去重(每行).rs  4-文本过滤.rs  5-链接文本末尾词前置.rs
Rust_grammar_git/2-xlsx/: 2-A列数据放入数组.rs  2.1-A列数据放入数组-函数.rs
Text_tool/src/: main.rs
书签/: 交易语录.md  快捷键.md  总书签.md  搜索问题.md
探索md/: AI.md  ChatterBot.md  GUI.md  Money.md  中药.md  自然语言.md  苹果爬取数据.md
探索md/中文转代码探索/: 0-词性 没用.txt  0.01-词性枚举.txt  1-分类 归纳 替换 逻辑 可用.txt  2-手动分隔语句 能英文替换中文  可用.txt  3-能分析 英文单词的 词性.txt  4-中文手动分隔 分析词性 可用.txt  5-提取动词后面的名词.txt  6-动词后名词 提取 可用.txt  7-规则和词性分析 解析出 第一条命令.txt  8-规则分离出来.txt  9-format!写成一句.txt
编程语法/: AI.md
编程语法/Fiddler Script/: 1-修改ajax请求.java
编程语法/Google/: 1-google ji qiao.md
软件使用/Sublime Text3/: 常规使用.md
(+224 files in other folders)
